@@ -1,30 +1,30 @@
 package org.lifecompanion.plugin.spellgame.model.useevent;
 
+import javafx.beans.binding.Bindings;
 import javafx.beans.property.ObjectProperty;
 import javafx.beans.property.SimpleObjectProperty;
 import org.jdom2.Element;
 import org.lifecompanion.controller.lifecycle.AppModeController;
 import org.lifecompanion.framework.commons.fx.io.XMLGenericProperty;
 import org.lifecompanion.framework.commons.fx.io.XMLObjectSerializer;
+import org.lifecompanion.framework.commons.fx.translation.TranslationFX;
 import org.lifecompanion.model.api.configurationcomponent.LCConfigurationI;
 import org.lifecompanion.model.api.io.IOContextI;
-import org.lifecompanion.model.api.selectionmode.MouseButton;
 import org.lifecompanion.model.api.usevariable.UseVariableDefinitionI;
-import org.lifecompanion.model.api.usevariable.UseVariableI;
 import org.lifecompanion.model.impl.categorizedelement.useevent.BaseUseEventGeneratorImpl;
-import org.lifecompanion.model.impl.categorizedelement.useevent.available.MouseButtonPressedEventGenerator;
 import org.lifecompanion.model.impl.exception.LCException;
 import org.lifecompanion.model.impl.usevariable.StringUseVariable;
 import org.lifecompanion.model.impl.usevariable.UseVariableDefinition;
 import org.lifecompanion.plugin.spellgame.controller.SpellGameController;
 import org.lifecompanion.plugin.spellgame.model.AnswerTypeEnum;
+import org.lifecompanion.plugin.spellgame.model.SpellGameStepResult;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.function.Consumer;
 
 public class SpellGameGameAnswerGivenEventGenerator extends BaseUseEventGeneratorImpl {
 
-    private final Runnable listener;
+    private final Consumer<SpellGameStepResult> listener;
 
     private final UseVariableDefinitionI answerContentDefinition;
 
@@ -39,31 +39,36 @@ public class SpellGameGameAnswerGivenEventGenerator extends BaseUseEventGenerato
         this.nameID = "spellgame.plugin.event.answer.given.name";
         this.staticDescriptionID = "spellgame.plugin.event.answer.given.description";
         this.configIconPath = "filler_icon.png";
-        this.variableDescriptionProperty().set(getStaticDescription());
+        this.answerFilter = new SimpleObjectProperty<>(AnswerTypeEnum.ALL);
 
         this.answerContentDefinition = new UseVariableDefinition("SpellGameAnswerContent", "spellgame.plugin.use.variable.event.answer.given.content.var.name",
                 "spellgame.plugin.use.variable.event.answer.given.content.var.description", "spellgame.plugin.use.variable.event.answer.given.content.var.example");
         this.generatedVariables.add(this.answerContentDefinition);
 
-        this.answerFilter = new SimpleObjectProperty<>(AnswerTypeEnum.ALL);
-        // spellgame.plugin.event.answer.given.variable.description
+        this.variableDescriptionProperty().bind(TranslationFX.getTextBinding("spellgame.plugin.event.answer.given.variable.description",
+                Bindings.createStringBinding(() -> answerFilter.get() != null ? answerFilter.get().getName() : "", answerFilter)));
 
-        listener = () -> {
+        listener = (answer) -> {
             if (AppModeController.INSTANCE.isUseMode()) {
-                // List<UseVariableI<?>> variables = Arrays.asList(new StringUseVariable(this.keyNameDefinition, keyEvent.getKeyCode().getName()));
-                this.useEventListener.fireEvent(this, null, null);
+                if (this.answerFilter.get().filter(answer)) {
+                    this.useEventListener.fireEvent(this, List.of(new StringUseVariable(this.answerContentDefinition, answer.input())), null);
+                }
             }
         };
     }
 
+    public ObjectProperty<AnswerTypeEnum> answerFilterProperty() {
+        return answerFilter;
+    }
+
     @Override
     public void modeStart(final LCConfigurationI configuration) {
-        SpellGameController.INSTANCE.addGameEndedListener(listener);
+        SpellGameController.INSTANCE.addAnswerListener(listener);
     }
 
     @Override
     public void modeStop(final LCConfigurationI configuration) {
-        SpellGameController.INSTANCE.removeGameEndedListener(listener);
+        SpellGameController.INSTANCE.removeAnswerListener(listener);
     }
 
     @Override
